[gd_scene load_steps=27 format=1]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://scenes/NPC.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/personagem.tscn" type="PackedScene" id=3]
[ext_resource path="res://tilesets/tileagrvai.tres" type="TileSet" id=4]
[ext_resource path="res://assets/f0a1daca607b12766ac114bfe277bf74.jpg" type="Texture" id=5]
[ext_resource path="res://scenes/moeda.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/ticoid.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/blocoDest.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/platMovel.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/Botoes/esquerda0.png" type="Texture" id=10]
[ext_resource path="res://assets/Botoes/esquerda1.png" type="Texture" id=11]
[ext_resource path="res://assets/Botoes/punch.png" type="Texture" id=12]
[ext_resource path="res://assets/Botoes/punch_press.png" type="Texture" id=13]
[ext_resource path="res://assets/Botoes/direita0.png" type="Texture" id=14]
[ext_resource path="res://assets/Botoes/direita1.png" type="Texture" id=15]
[ext_resource path="res://assets/Botoes/cima0.png" type="Texture" id=16]
[ext_resource path="res://assets/Botoes/cima1.png" type="Texture" id=17]
[ext_resource path="res://assets/home_button1.png" type="Texture" id=18]
[ext_resource path="res://assets/home_button2.png" type="Texture" id=19]
[ext_resource path="res://assets/coin.png" type="Texture" id=20]
[ext_resource path="res://fonts/font1000.fnt" type="BitmapFont" id=21]
[ext_resource path="res://assets/hud_heartFull.png" type="Texture" id=22]
[ext_resource path="res://scenes/pao.tscn" type="PackedScene" id=23]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": Vector2Array( 0, 0, 0, 0, 9.73914, -0.664124, 0, 0, 0, 0, -281.086, -0.664124 )
}

[sub_resource type="StyleBoxEmpty" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 35, 700 )

[node name="game" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="NPC" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 3000, 80 )

[node name="spawn_point" type="Position2D" parent="."]

transform/pos = Vector2( 600, 450 )
transform/rot = -0.1

[node name="spawn_time" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="dead_camera" type="Camera2D" parent="."]

anchor_mode = 1
rotating = false
current = false
zoom = Vector2( 1, 1 )
limit/left = 0
limit/top = -10000000
limit/right = 10000000
limit/bottom = 900
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="personagem" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 600, 450 )

[node name="tileMap" type="TileMap" parent="."]

transform/scale = Vector2( 4, 4 )
z/z = 1
mode = 0
tile_set = ExtResource( 4 )
cell/size = Vector2( 16, 16 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 2
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -524291, 3, -524290, 6, -458755, 3, -458754, 31, -393219, 3, -393218, 31, -393217, 7, -327683, 3, -327682, 31, -327681, 31, -262147, 3, -262146, 31, -262145, 31, -327680, 7, -196611, 3, -196610, 31, -196609, 31, -262144, 6, -131075, 3, -131074, 31, -131073, 31, -196608, 6, -65539, 3, -65538, 31, -65537, 31, -131072, 6, -131071, 7, -3, 3, -2, 31, -1, 31, -65536, 6, -65535, 6, 65533, 3, 65534, 31, 65535, 31, 0, 6, 1, 6, 131069, 3, 131070, 31, 131071, 31, 65536, 6, 65537, 6, 196605, 3, 196606, 31, 196607, 31, 131072, 6, 131073, 6, 131074, 7, 131117, 1, 131118, 0, 131119, 0, 131120, 0, 131121, 0, 131122, 0, 131123, 0, 131124, 0, 131125, 0, 131126, 0, 131127, 0, 131128, 2, 262141, 3, 262142, 31, 262143, 31, 196608, 6, 196609, 6, 196610, 6, 196652, 1, 196653, 10, 196654, 3, 196655, 3, 196656, 3, 196657, 3, 196658, 3, 196659, 3, 196660, 3, 196661, 3, 196662, 3, 196663, 3, 196664, 8, 196665, 2, 327677, 3, 327678, 31, 327679, 31, 262144, 6, 262145, 6, 262146, 6, 262147, 7, 262187, 1, 262188, 10, 262189, 3, 262190, 3, 262191, 3, 262192, 3, 262193, 3, 262194, 3, 262195, 3, 262196, 3, 262197, 3, 262198, 3, 262199, 3, 262200, 3, 262201, 8, 262202, 2, 262220, 29, 262221, 0, 262222, 0, 262223, 0, 262224, 0, 262225, 0, 262226, 0, 262227, 30, 393213, 3, 393214, 31, 393215, 31, 327680, 6, 327681, 6, 327682, 6, 327683, 6, 327684, 7, 327722, 1, 327723, 10, 327724, 3, 327725, 3, 327726, 3, 327727, 3, 327728, 3, 327729, 3, 327730, 3, 327731, 3, 327732, 3, 327733, 3, 327734, 3, 327735, 3, 327736, 3, 327737, 3, 327738, 8, 327739, 2, 458749, 3, 458750, 31, 458751, 31, 393216, 6, 393217, 6, 393218, 6, 393219, 6, 393220, 6, 393221, 7, 393257, 1, 393258, 10, 393259, 3, 393260, 3, 393261, 3, 393262, 3, 393263, 3, 393264, 3, 393265, 3, 393266, 3, 393267, 3, 393268, 3, 393269, 3, 393270, 3, 393271, 3, 393272, 3, 393273, 3, 393274, 3, 393275, 8, 393276, 2, 524285, 3, 524286, 31, 524287, 31, 458752, 6, 458753, 6, 458754, 6, 458755, 6, 458756, 6, 458757, 6, 458758, 7, 458792, 1, 458793, 10, 458794, 3, 458795, 3, 458796, 3, 458797, 3, 458798, 3, 458799, 3, 458800, 3, 458801, 3, 458802, 3, 458803, 3, 458804, 3, 458805, 3, 458806, 3, 458807, 3, 458808, 3, 458809, 3, 458810, 3, 458811, 3, 458812, 8, 458813, 2, 589821, 3, 589822, 0, 589823, 0, 524288, 0, 524289, 0, 524290, 0, 524291, 0, 524292, 0, 524293, 0, 524294, 0, 524295, 0, 524296, 0, 524297, 0, 524298, 0, 524299, 0, 524300, 0, 524301, 0, 524302, 0, 524303, 0, 524304, 0, 524305, 0, 524306, 2, 524307, 23, 524308, 23, 524311, 23, 524312, 23, 524313, 1, 524314, 0, 524315, 0, 524316, 0, 524317, 0, 524318, 0, 524319, 0, 524320, 0, 524321, 0, 524322, 0, 524323, 0, 524324, 0, 524325, 0, 524326, 0, 524327, 0, 524328, 10, 524329, 3, 524330, 3, 524331, 3, 524332, 3, 524333, 3, 524334, 3, 524335, 3, 524336, 3, 524337, 3, 524338, 3, 524339, 3, 524340, 3, 524341, 3, 524342, 3, 524343, 3, 524344, 3, 524345, 3, 524346, 3, 524347, 3, 524348, 3, 524349, 8, 524350, 0, 524351, 0, 524352, 0, 524353, 0, 524354, 0, 524355, 0, 524356, 0, 524357, 0, 524358, 0, 524359, 0, 524360, 0, 524361, 0, 524362, 0, 524363, 0, 524364, 0, 524365, 0, 524366, 0, 524367, 0, 524368, 0, 524369, 0, 524370, 0, 524371, 0, 524372, 0, 524373, 2, 655357, 3, 655358, 3, 655359, 3, 589824, 3, 589825, 3, 589826, 3, 589827, 3, 589828, 3, 589829, 3, 589830, 3, 589831, 3, 589832, 3, 589833, 3, 589834, 3, 589835, 3, 589836, 3, 589837, 3, 589838, 3, 589839, 3, 589840, 3, 589841, 3, 589842, 5, 589843, 7, 589844, 7, 589845, 7, 589846, 7, 589847, 7, 589848, 7, 589849, 4, 589850, 3, 589851, 3, 589852, 3, 589853, 3, 589854, 3, 589855, 3, 589856, 3, 589857, 3, 589858, 3, 589859, 3, 589860, 3, 589861, 3, 589862, 3, 589863, 3, 589864, 3, 589865, 3, 589866, 3, 589867, 3, 589868, 3, 589869, 3, 589870, 3, 589871, 3, 589872, 3, 589873, 3, 589874, 3, 589875, 3, 589876, 3, 589877, 3, 589878, 3, 589879, 3, 589880, 3, 589881, 3, 589882, 3, 589883, 3, 589884, 3, 589885, 3, 589886, 3, 589887, 3, 589888, 3, 589889, 3, 589890, 3, 589891, 3, 589892, 3, 589893, 3, 589894, 3, 589895, 3, 589896, 3, 589897, 3, 589898, 3, 589899, 3, 589900, 3, 589901, 3, 589902, 3, 589903, 3, 589904, 3, 589905, 3, 589906, 3, 589907, 3, 589908, 3, 589909, 5, 720893, 3, 720894, 3, 720895, 3, 655360, 3, 655361, 3, 655362, 3, 655363, 3, 655364, 3, 655365, 3, 655366, 3, 655367, 3, 655368, 3, 655369, 3, 655370, 3, 655371, 3, 655372, 3, 655373, 3, 655374, 3, 655375, 3, 655376, 3, 655377, 3, 655378, 5, 655379, 6, 655380, 6, 655381, 6, 655382, 6, 655383, 6, 655384, 6, 655385, 4, 655386, 3, 655387, 3, 655388, 3, 655389, 3, 655390, 3, 655391, 3, 655392, 3, 655393, 3, 655394, 3, 655395, 3, 655396, 3, 655397, 3, 655398, 3, 655399, 3, 655400, 3, 655401, 3, 655402, 3, 655403, 3, 655404, 3, 655405, 3, 655406, 3, 655407, 3, 655408, 3, 655409, 3, 655410, 3, 655411, 3, 655412, 3, 655413, 3, 655414, 3, 655415, 3, 655416, 3, 655417, 3, 655418, 3, 655419, 3, 655420, 3, 655421, 3, 655422, 3, 655423, 3, 655424, 3, 655425, 3, 655426, 3, 655427, 3, 655428, 3, 655429, 3, 655430, 3, 655431, 3, 655432, 3, 655433, 3, 655434, 3, 655435, 3, 655436, 3, 655437, 3, 655438, 3, 655439, 3, 655440, 3, 655441, 3, 655442, 3, 655443, 3, 655444, 3, 655445, 5, 786429, 3, 786430, 3, 786431, 3, 720896, 3, 720897, 3, 720898, 3, 720899, 3, 720900, 3, 720901, 3, 720902, 3, 720903, 3, 720904, 3, 720905, 3, 720906, 3, 720907, 3, 720908, 3, 720909, 3, 720910, 3, 720911, 3, 720912, 3, 720913, 3, 720914, 5, 720915, 6, 720916, 6, 720917, 6, 720918, 6, 720919, 6, 720920, 6, 720921, 4, 720922, 3, 720923, 3, 720924, 3, 720925, 3, 720926, 3, 720927, 3, 720928, 3, 720929, 3, 720930, 3, 720931, 3, 720932, 3, 720933, 3, 720934, 3, 720935, 3, 720936, 3, 720937, 3, 720938, 3, 720939, 3, 720940, 3, 720941, 3, 720942, 3, 720943, 3, 720944, 3, 720945, 3, 720946, 3, 720947, 3, 720948, 3, 720949, 3, 720950, 3, 720951, 3, 720952, 3, 720953, 3, 720954, 3, 720955, 3, 720956, 3, 720957, 3, 720958, 3, 720959, 3, 720960, 3, 720961, 3, 720962, 3, 720963, 3, 720964, 3, 720965, 3, 720966, 3, 720967, 3, 720968, 3, 720969, 3, 720970, 3, 720971, 3, 720972, 3, 720973, 3, 720974, 3, 720975, 3, 720976, 3, 720977, 3, 720978, 3, 720979, 3, 720980, 3, 720981, 5, 851965, 3, 851966, 3, 851967, 3, 786432, 3, 786433, 3, 786434, 3, 786435, 3, 786436, 3, 786437, 3, 786438, 3, 786439, 3, 786440, 3, 786441, 3, 786442, 3, 786443, 3, 786444, 3, 786445, 3, 786446, 3, 786447, 3, 786448, 3, 786449, 3, 786450, 5, 786451, 6, 786452, 6, 786453, 6, 786454, 6, 786455, 6, 786456, 6, 786457, 4, 786458, 3, 786459, 3, 786460, 3, 786461, 3, 786462, 3, 786463, 3, 786464, 3, 786465, 3, 786466, 3, 786467, 3, 786468, 3, 786469, 3, 786470, 3, 786471, 3, 786472, 3, 786473, 3, 786474, 3, 786475, 3, 786476, 3, 786477, 3, 786478, 3, 786479, 3, 786480, 3, 786481, 3, 786482, 3, 786483, 3, 786484, 3, 786485, 3, 786486, 3, 786487, 3, 786488, 3, 786489, 3, 786490, 3, 786491, 3, 786492, 3, 786493, 3, 786494, 3, 786495, 3, 786496, 3, 786497, 3, 786498, 3, 786499, 3, 786500, 3, 786501, 3, 786502, 3, 786503, 3, 786504, 3, 786505, 3, 786506, 3, 786507, 3, 786508, 3, 786509, 3, 786510, 3, 786511, 3, 786512, 3, 786513, 3, 786514, 3, 786515, 3, 786516, 3, 786517, 5, 917501, 3, 917502, 3, 917503, 3, 851968, 3, 851969, 3, 851970, 3, 851971, 3, 851972, 3, 851973, 3, 851974, 3, 851975, 3, 851976, 3, 851977, 3, 851978, 3, 851979, 3, 851980, 3, 851981, 3, 851982, 3, 851983, 3, 851984, 3, 851985, 3, 851986, 5, 851987, 6, 851988, 6, 851989, 6, 851990, 6, 851991, 6, 851992, 6, 851993, 4, 851994, 3, 851995, 3, 851996, 3, 851997, 3, 851998, 3, 851999, 3, 852000, 3, 852001, 3, 852002, 3, 852003, 3, 852004, 3, 852005, 3, 852006, 3, 852007, 3, 852008, 3, 852009, 3, 852010, 3, 852011, 3, 852012, 3, 852013, 3, 852014, 3, 852015, 3, 852016, 3, 852017, 3, 852018, 3, 852019, 3, 852020, 3, 852021, 3, 852022, 3, 852023, 3, 852024, 3, 852025, 3, 852026, 3, 852027, 3, 852028, 3, 852029, 3, 852030, 3, 852031, 3, 852032, 3, 852033, 3, 852034, 3, 852035, 3, 852036, 3, 852037, 3, 852038, 3, 852039, 3, 852040, 3, 852041, 3, 852042, 3, 852043, 3, 852044, 3, 852045, 3, 852046, 3, 852047, 3, 852048, 3, 852049, 3, 852050, 3, 852051, 3, 852052, 3, 852053, 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="parallax" type="ParallaxBackground" parent="."]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
scroll/offset = Vector2( 0, 0 )
scroll/base_offset = Vector2( 0, 0 )
scroll/base_scale = Vector2( 1, 1 )
scroll/limit_begin = Vector2( 0, 0 )
scroll/limit_end = Vector2( 0, 0 )
scroll/ignore_camera_zoom = true

[node name="layer" type="ParallaxLayer" parent="parallax"]

motion/scale = Vector2( 0.5, 1 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 0, 0 )

[node name="Backgroud" type="Sprite" parent="parallax/layer"]

transform/pos = Vector2( 1062.35, 136.789 )
transform/scale = Vector2( 1.24875, 1.1771 )
z/z = -3
texture = ExtResource( 5 )

[node name="Backgroud1" type="Sprite" parent="parallax/layer"]

transform/pos = Vector2( 3432.7, 137.147 )
transform/scale = Vector2( 1.24875, 1.1771 )
z/z = -3
texture = ExtResource( 5 )

[node name="Backgroud2" type="Sprite" parent="parallax/layer"]

transform/pos = Vector2( 5799.47, 132.488 )
transform/scale = Vector2( 1.24875, 1.1771 )
z/z = -3
texture = ExtResource( 5 )

[node name="moedas" type="Node2D" parent="."]

editor/display_folded = true

[node name="moeda" parent="moedas" instance=ExtResource( 6 )]

transform/pos = Vector2( 1017.38, 175.649 )

[node name="moeda1" parent="moedas" instance=ExtResource( 6 )]

transform/pos = Vector2( 849.752, 472.197 )

[node name="moeda17" parent="moedas" instance=ExtResource( 6 )]

transform/pos = Vector2( 935.365, 472.846 )

[node name="moeda18" parent="moedas" instance=ExtResource( 6 )]

transform/pos = Vector2( 1362.2, 174.426 )

[node name="moeda2" parent="moedas" instance=ExtResource( 6 )]

transform/pos = Vector2( 105, 455 )

[node name="moeda3" parent="moedas" instance=ExtResource( 6 )]

transform/pos = Vector2( 682.559, 472.122 )

[node name="moeda4" parent="moedas" instance=ExtResource( 6 )]

transform/pos = Vector2( 764.789, 473.345 )

[node name="moeda5" parent="moedas" instance=ExtResource( 6 )]

transform/pos = Vector2( 1085, 175 )

[node name="moeda6" parent="moedas" instance=ExtResource( 6 )]

transform/pos = Vector2( 1155, 175 )

[node name="moeda7" parent="moedas" instance=ExtResource( 6 )]

transform/pos = Vector2( 1225, 175 )

[node name="moeda8" parent="moedas" instance=ExtResource( 6 )]

transform/pos = Vector2( 1295, 175 )

[node name="moeda9" parent="moedas" instance=ExtResource( 6 )]

transform/pos = Vector2( 2218.6, 471.91 )

[node name="moeda10" parent="moedas" instance=ExtResource( 6 )]

transform/pos = Vector2( 2381.55, 470.687 )

[node name="moeda11" parent="moedas" instance=ExtResource( 6 )]

transform/pos = Vector2( 2297.09, 471.548 )

[node name="moeda12" parent="moedas" instance=ExtResource( 6 )]

transform/pos = Vector2( 3115, 105 )

[node name="moeda13" parent="moedas" instance=ExtResource( 6 )]

transform/pos = Vector2( 3185, 105 )

[node name="moeda19" parent="moedas" instance=ExtResource( 6 )]

transform/pos = Vector2( 4439.85, 226.967 )

[node name="inimigos" type="Node2D" parent="."]

editor/display_folded = true

[node name="ticoid" parent="inimigos" instance=ExtResource( 7 )]

transform/pos = Vector2( 3477.01, 103.68 )
curve = SubResource( 1 )

[node name="ticoid1" parent="inimigos" instance=ExtResource( 7 )]

transform/pos = Vector2( 2472.31, 486.032 )
curve = SubResource( 1 )

[node name="ticoid2" parent="inimigos" instance=ExtResource( 7 )]

transform/pos = Vector2( 5007.51, 486.688 )
curve = SubResource( 1 )

[node name="blocos" type="Node2D" parent="."]

editor/display_folded = true

[node name="blocoDest" parent="blocos" instance=ExtResource( 8 )]

transform/pos = Vector2( 1050, 250 )

[node name="blocoDest1" parent="blocos" instance=ExtResource( 8 )]

transform/pos = Vector2( 1110, 250 )

[node name="blocoDest2" parent="blocos" instance=ExtResource( 8 )]

transform/pos = Vector2( 1230, 250 )

[node name="blocoDest3" parent="blocos" instance=ExtResource( 8 )]

transform/pos = Vector2( 1290, 250 )
transform/rot = -0.1

[node name="blocoDest4" parent="blocos" instance=ExtResource( 8 )]

transform/pos = Vector2( 1170, 250 )
transform/rot = -0.1

[node name="blocoDest5" parent="blocos" instance=ExtResource( 8 )]

transform/pos = Vector2( 908.336, 336.727 )

[node name="blocoDest6" parent="blocos" instance=ExtResource( 8 )]

transform/pos = Vector2( 1350, 250 )

[node name="blocoDest8" parent="blocos" instance=ExtResource( 8 )]

transform/pos = Vector2( 4380, 300 )

[node name="blocoDest9" parent="blocos" instance=ExtResource( 8 )]

transform/pos = Vector2( 4440, 300 )

[node name="blocoDest10" parent="blocos" instance=ExtResource( 8 )]

transform/pos = Vector2( 4500, 300 )
transform/rot = -0.1

[node name="plataformas" type="Node2D" parent="."]

editor/display_folded = true

[node name="platMovel" parent="plataformas" instance=ExtResource( 9 )]

transform/pos = Vector2( 4050, 350 )

[node name="canvasLayer" type="CanvasLayer" parent="."]

layer = 2
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="controles" type="Node2D" parent="canvasLayer"]

[node name="touchLeft" type="TouchScreenButton" parent="canvasLayer/controles"]

transform/pos = Vector2( 35, 595 )
transform/scale = Vector2( 3.5, 3.5 )
normal = ExtResource( 10 )
pressed = ExtResource( 11 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="punch" type="TouchScreenButton" parent="canvasLayer/controles"]

transform/pos = Vector2( 864.95, 593.772 )
transform/scale = Vector2( 3.5, 3.5 )
normal = ExtResource( 12 )
pressed = ExtResource( 13 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="touchRight" type="TouchScreenButton" parent="canvasLayer/controles"]

transform/pos = Vector2( 175, 595 )
transform/scale = Vector2( 3.5, 3.5 )
normal = ExtResource( 14 )
pressed = ExtResource( 15 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="touchUp" type="TouchScreenButton" parent="canvasLayer/controles"]

transform/pos = Vector2( 1085, 595 )
transform/scale = Vector2( 3.5, 3.5 )
normal = ExtResource( 16 )
pressed = ExtResource( 17 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Panel" type="Panel" parent="canvasLayer/controles"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 100.0
custom_styles/panel = SubResource( 2 )

[node name="Menu" type="TextureButton" parent="canvasLayer/controles/Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 60.0
margin/top = 20.0
margin/right = 120.0
margin/bottom = 80.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 18 )
textures/pressed = ExtResource( 19 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="moeda" type="Sprite" parent="canvasLayer/controles/Panel"]

transform/pos = Vector2( 200, 50 )
transform/scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 20 )

[node name="moedas" type="Label" parent="canvasLayer/controles/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 250.0
margin/top = 20.0
margin/right = 340.0
margin/bottom = 820.0
custom_fonts/font = ExtResource( 21 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_constants/shadow_as_outline = 1
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="heart3" type="TextureFrame" parent="canvasLayer/controles/Panel"]

rect/scale = Vector2( 0.2, 0.2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 950.0
margin/top = 20.0
margin/right = 1750.0
margin/bottom = 820.0
texture = ExtResource( 22 )
stretch_mode = 0

[node name="heart4" type="TextureFrame" parent="canvasLayer/controles/Panel"]

rect/scale = Vector2( 0.2, 0.2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1050.0
margin/top = 20.0
margin/right = 1850.0
margin/bottom = 820.0
texture = ExtResource( 22 )
stretch_mode = 0

[node name="heart5" type="TextureFrame" parent="canvasLayer/controles/Panel"]

rect/scale = Vector2( 0.2, 0.2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1150.0
margin/top = 20.0
margin/right = 1950.0
margin/bottom = 820.0
texture = ExtResource( 22 )
stretch_mode = 0

[node name="time" type="Label" parent="canvasLayer/controles/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 520.0
margin/top = 22.0
margin/right = 700.0
margin/bottom = 822.0
custom_fonts/font = ExtResource( 21 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_constants/shadow_as_outline = 1
text = "30"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="fim" type="Area2D" parent="."]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 0.5, 0, 0, 1, 5435.45, 186.935 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 0

[node name="shape" type="CollisionShape2D" parent="fim"]

transform/pos = Vector2( 5435.45, 186.935 )
transform/scale = Vector2( 0.5, 1 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="gameTime" type="Timer" parent="."]

process_mode = 1
wait_time = 60.0
one_shot = true
autostart = true

[node name="danos" type="Node2D" parent="."]

editor/display_folded = true

[node name="pao" parent="danos" instance=ExtResource( 23 )]

transform/pos = Vector2( 1810.47, 465.16 )

[connection signal="timeout" from="spawn_time" to="." method="_on_spawn_time_timeout"]

[connection signal="fim" from="personagem" to="." method="_on_personagem_fim"]

[connection signal="moeda" from="personagem" to="." method="_on_personagem_moeda"]

[connection signal="morreu" from="personagem" to="." method="_on_personagem_morreu"]

[connection signal="pressed" from="canvasLayer/controles/Panel/Menu" to="." method="_on_Menu_pressed"]

[connection signal="timeout" from="gameTime" to="personagem" method="_on_gameTime_timeout"]


